v0.4.1 : overflow bug fixed

--- a/main/src/scss/style.scss
+++ b/main/src/scss/style.scss
@@ -17,8 +17,8 @@ $animationborder :linear-gradient(to right, rgb(38, 105, 102) 100%, rgb(38, 105,
 .background-wrapper{
     background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
     font-family: 'Comfortaa';
-    height: 100%;
-    width: 100%;
+    height: 100vw;
+    width: 100vh;
     overflow: hidden;
     
     .grid-wrapper{
